--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ arch:
   - ppc64le
 language: java
 script:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn clean install -U -Dmaven.test.failure.ignore=true
   - mvn test -B
