--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ arch:
   - amd64
   - ppc64le
 language: java
-script:
-  - mvn clean install -U -Dmaven.test.failure.ignore=true
-  - mvn test -B
+dist: xenial
+sudo: required
+
+jdk:
+  - openjdk8
